src/test/ui/range/issue-54505.stderr
error[E0308]: mismatched types
  --> $DIR/issue-54505.rs:14:16
   |
LL |     take_range(0..1);
   |                ^^^^
   |                |
   |                expected reference, found struct `Range`
   |                help: consider borrowing here: `&(0..1)`
   |
   = note: expected type `&_`
              found type `Range<{integer}>`
            reachable by `use std::ops::Range;`

error[E0308]: mismatched types
  --> $DIR/issue-54505.rs:19:16
   |
LL |     take_range(1..);
   |                ^^^
   |                |
   |                expected reference, found struct `RangeFrom`
   |                help: consider borrowing here: `&(1..)`
   |
   = note: expected type `&_`
              found type `RangeFrom<{integer}>`
            reachable by `use std::ops::RangeFrom;`

error[E0308]: mismatched types
  --> $DIR/issue-54505.rs:24:16
   |
LL |     take_range(..);
   |                ^^
   |                |
   |                expected reference, found struct `RangeFull`
   |                help: consider borrowing here: `&(..)`
   |
   = note: expected type `&_`
              found type `RangeFull`
            reachable by `use std::ops::RangeFull;`

error[E0308]: mismatched types
  --> $DIR/issue-54505.rs:29:16
   |
LL |     take_range(0..=1);
   |                ^^^^^
   |                |
   |                expected reference, found struct `RangeInclusive`
   |                help: consider borrowing here: `&(0..=1)`
   |
   = note: expected type `&_`
              found type `RangeInclusive<{integer}>`
            reachable by `use std::ops::RangeInclusive;`

error[E0308]: mismatched types
  --> $DIR/issue-54505.rs:34:16
   |
LL |     take_range(..5);
   |                ^^^
   |                |
   |                expected reference, found struct `RangeTo`
   |                help: consider borrowing here: `&(..5)`
   |
   = note: expected type `&_`
              found type `RangeTo<{integer}>`
            reachable by `use std::ops::RangeTo;`

error[E0308]: mismatched types
  --> $DIR/issue-54505.rs:39:16
   |
LL |     take_range(..=42);
   |                ^^^^^
   |                |
   |                expected reference, found struct `RangeToInclusive`
   |                help: consider borrowing here: `&(..=42)`
   |
   = note: expected type `&_`
              found type `RangeToInclusive<{integer}>`
            reachable by `use std::ops::RangeToInclusive;`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
